[main-private] updated NetCDF to COG process